# arm_makefile_project_template

APM32/APM32F103C8T6/: makefile
APM32/cmake-APM32F103C8T6/: CMakeLists.txt  makefile
APM32/cmake-APM32F103C8T6/bsp/: system.h
APM32/cpp_temp/: makefile
APM32/i2c_temp/: makefile
APM32/input-scanf/: makefile
APM32/modern-cmake-APM32F103C8T6/: CMakeLists.txt  makefile  rules.py  temp.dis  temp.map
APM32/modern-cmake-APM32F103C8T6/app/: CMakeLists.txt  app.c  app.h
APM32/modern-cmake-APM32F103C8T6/board/: CMakeLists.txt  apm32f10x_int.c
APM32/modern-cmake-APM32F103C8T6/bsp/: CMakeLists.txt  apm32f10x_int.h  main.c
APM32/modern-cmake-APM32F103C8T6/lib/: CMakeLists.txt
APM32/modern-cmake-APM32F103C8T6/main/: CMakeLists.txt  main.c
APM32/rt_temp/: makefile
air/air001/air001_HAL/: makefile
air/air001/air001_LL/: makefile
air/air32/air32f103xb/: makefile
air/air32/air32f103xb_freertos/: makefile
